--- a/index.html
+++ b/index.html
@@ -3,25 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games</title>
+    <title>FiLaro: Word and Vocabulary Minigames.</title>
+    <link rel="icon" href="icons/fl500.png" sizes="500x500" type="image/png">
     <link rel="stylesheet" href="menu.css">
     <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <img src="icons/fl500.png" alt="FiLaro" class="logo">
+        </div>
         <h1>FiLaro</h1>
     </header>
     <main>
         <section class="game-modes">
             <div class="game-mode">
+                <div class="image-container">
+                    <img src="icons/ss500.png" alt="SaliScramble">
+                </div>
                 <h2>SaliScramble</h2>
                 <p>Unscramble niche pinoy words.</p>
-                <a href="saliScramble.html">Play</a>
+                    <div class="laro">
+                        <a href="saliScramble.html">Play</a>
+                    </div>
             </div>
             <div class="game-mode">
+                <div class="image-container">
+                    <img src="icons/wb500.png" alt="WikaBlanks">
+                </div>
                 <h2>WikaBlanks</h2>
                 <p>Use the correct word for the sentences.</p>
-                <a href="wikaBlanks.html">Play</a>
+                <div class="laro">
+                    <a href="wikaBlanks.html">Play</a>
+                </div>
             </div>
         </section>
     </main>
