--- a/saliScramble.html
+++ b/saliScramble.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SaliScramble</title>
+    <link rel="icon" href="icons/ss500.png" sizes="500x500" type="image/png">
     <link rel="stylesheet" href="saliScramble.css">
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>SaliScramble</h1>
-        </header>
-        <div id="white">
-            <h5>WAZAAAAA</h5>
-            
+    <header>
+        <div class="logo-container">
+            <img src="icons/ss500.png" alt="saliScramble Logo" class="logo">
         </div>
+        <h1>SaliScramble</h1>
+    </header>
+    <div class="container">
         <button id="startGame">Start</button>
         <div id="game" class="hidden">
             <p id="roundDisplay">0/20</p> <!-- Round progress display -->
