--- a/wikaBlanks.html
+++ b/wikaBlanks.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikaBlanks</title>
+    <link rel="icon" href="icons/wb500.png" sizes="500x500" type="image/png">
     <link rel="stylesheet" href="wikablanks.css">
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <img src="icons/wb500.png" alt="wikaBlanks Logo" class="logo">
+        </div>
         <h1>WikaBlanks</h1>
     </header>
-
     <main>
         <div class="game-container">
             <!-- Progress Counter -->
             <p id="progress-counter">1/20</p>
 
             <!-- Sentence with a blank -->
-            <p class="sentence">
-                Ang <span class="blank">_____</span> ay isang <span class="blank">_____</span>.
-            </p>
+            <div class="sentence"></div>
 
             <!-- Choices -->
             <div class="choices">
