--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FiLaro: Word and Vocabulary Minigames.</title>
-    <link rel="icon" href="icons/fl500.png" sizes="500x500" type="image/png">
+    <link rel="icon" href="/icons/fl500.png" sizes="500x500" type="image/png">
     <link rel="stylesheet" href="menu.css">
     <link rel="manifest" href="/manifest.json">
 </head>
