--- a/wikaBlanks.html
+++ b/wikaBlanks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikaBlanks</title>
-    <link rel="icon" href="icons/wb500.png" sizes="500x500" type="image/png">
+    <link rel="icon" href="/icons/wb500.png" sizes="500x500" type="image/png">
     <link rel="stylesheet" href="wikablanks.css">
 </head>
 <body>
