--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 </div>
                 <h2>SaliScramble</h2>
                 <p>Unscramble niche pinoy words.</p>
-                    <div class="laro">
-                        <a href="saliScramble.html">Play</a>
-                    </div>
+                 <a href="saliScramble.html" class="laro">Play</a>
             </div>
             <div class="game-mode">
                 <div class="image-container">
@@ -33,9 +31,7 @@
                 </div>
                 <h2>WikaBlanks</h2>
                 <p>Use the correct word for the sentences.</p>
-                <div class="laro">
-                    <a href="wikaBlanks.html">Play</a>
-                </div>
+                <a href="wikaBlanks.html" class="laro">Play</a>
             </div>
         </section>
     </main>
