--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     </header>
     <main>
         <section class="game-modes">
-            <div class="game-mode">
+            <div class="game-mode1">
                 <div class="image-container">
                     <img src="icons/ss500.png" alt="SaliScramble">
                 </div>
-                <h2>SaliScramble</h2>
-                <p>Unscramble niche pinoy words.</p>
-                 <a href="saliScramble.html" class="laro">Play</a>
+                    <h2>SaliScramble</h2>
+                    <p>Unscramble niche pinoy words.</p>
+                    <a href="saliScramble.html" class="laro">Play</a>
             </div>
-            <div class="game-mode">
+            <div class="game-mode2">
                 <div class="image-container">
                     <img src="icons/wb500.png" alt="WikaBlanks">
                 </div>
-                <h2>WikaBlanks</h2>
-                <p>Use the correct word for the sentences.</p>
-                <a href="wikaBlanks.html" class="laro">Play</a>
+                    <h2>WikaBlanks</h2>
+                    <p>Use the correct word for the sentences.</p>
+                    <a href="wikaBlanks.html" class="laro">Play</a>
             </div>
         </section>
     </main>
