--- a/setup.html
+++ b/setup.html
@@ -17,16 +17,16 @@
             <h2>Choose Your Bot</h2>
             <div id="avatar-options">
                 <div class="avatar-card" data-avatar="pedro">
-                    <img src="bot/pedro.png" alt="Avatar 1">
+                    <img src="images/bot/pedro.png" alt="Avatar 1">
                 </div>
                 <div class="avatar-card" data-avatar="Jose">
-                    <img src="bot/Jose.png" alt="Avatar 2">
+                    <img src="images/bot/Jose.png" alt="Avatar 2">
                 </div>
                 <div class="avatar-card" data-avatar="King">
-                    <img src="bot/King.png" alt="Avatar 3">
+                    <img src="images/bot/King.png" alt="Avatar 3">
                 </div>
                 <div class="avatar-card" data-avatar="Drake">
-                    <img src="bot/Drake.png" alt="Avatar 4">
+                    <img src="images/bot/Drake.png" alt="Avatar 4">
                 </div>
             </div>
 
