--- a/setup.html
+++ b/setup.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/bot/pedro.png" sizes="500x500" type="image/png">
     <title>Bot Setup</title>
     <script src="menu.js"></script>
     <link rel="stylesheet" href="setup.css">
 </head>
 <body>
     <header>
-        <h1>Bot Setup</h1>
-        <p>Customize your bot!</p>
+        <div class="logo-container">
+            <img src="images/bot/pedro.png" alt="FiLaro" class="logo">
+        </div>
+        <h1>Setup</h1>
     </header>
     <main>
         <div id="setup-container">
@@ -25,22 +28,21 @@
                 <div class="avatar-card" data-avatar="King">
                     <img src="images/bot/King.png" alt="Avatar 3">
                 </div>
-                <div class="avatar-card" data-avatar="Drake">
-                    <img src="images/bot/Drake.png" alt="Avatar 4">
+                <div class="avatar-card" data-avatar="maria">
+                    <img src="images/bot/maria.png" alt="Avatar 4">
                 </div>
-            </div>
-
-            <div id="bot-name-section">
-                <label for="bot-name">Bot Name:</label>
-                <input type="text" id="bot-name" placeholder="Enter your bot's name">
+                <div class="avatar-card" data-avatar="norbert">
+                    <img src="images/bot/norbert.png" alt="Avatar 5">
+                </div>
             </div>
 
             <button id="save-bot">Save Bot</button>
         </div>
         <a href="index.html" class="back-button">Main Menu</a>
-        <footer>
-            <p>&copy; Group 3.</p>
-        </footer>
+    </main>
+    <footer>
+        <p>&copy; Group 3.</p>
+    </footer>
     <script src="menu.js"></script>
 </body>
 </html>
