--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                     <img src="icons/ss500.png" alt="SaliScramble">
                 </div>
                 <h2>SaliScramble</h2>
-                <p>Unscramble niche pinoy words.</p>
-                <a href="saliScramble.html" class="laro">Play</a>
+                <p>Unscramble random niche pinoy words.</p>
+                <a href="difficulty.html" class="laro">Play</a>
             </div>
             <div class="game-mode2">
                 <div class="image-container">
@@ -32,7 +32,7 @@
                 </div>
                 <h2>WikaBlanks</h2>
                 <p>Use the correct word for the sentences.</p>
-                <a href="wikaBlanks.html" class="laro">Play</a>
+                <a href="instructions.html" class="laro">Play</a>
             </div>
         </section>
         <div id="bot">
