--- a/offline.html
+++ b/offline.html
@@ -6,17 +6,21 @@
   <title>Offline - FiLaro</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
+        font-family: 'Inter', sans-serif;
+        text-align: center;
+        padding: 50px;
+        background-color: var(--light-gray); /* Light background */
+        color: var(--dark-gray); /* Dark text */
     }
+
     h1 {
-      color: #333;
+        color: var(--primary-color); /* Kahoot's purple */
     }
+
     p {
-      color: #666;
+        color: var(--dark-gray); /* Dark text */
     }
-  </style>
+</style>
 </head>
 <body>
   <h1>You're Offline</h1>
