--- a/setup.html
+++ b/setup.html
@@ -15,6 +15,9 @@
         </div>
         <h1>Setup</h1>
     </header>
+    <div id="bot">
+        <div id="speech-bubble"></div>
+    </div>
     <main>
         <div id="setup-container">
             <h2>Choose Your Bot</h2>
@@ -40,9 +43,9 @@
         </div>
         <a href="index.html" class="back-button">Main Menu</a>
     </main>
-    <footer>
-        <p>&copy; Group 3.</p>
-    </footer>
+
     <script src="menu.js"></script>
+    
+ 
 </body>
 </html>
