--- a/setup.html
+++ b/setup.html
@@ -19,28 +19,51 @@
         <div id="speech-bubble"></div>
     </div>
     <main>
+        <button id="save-bot">Save Bot</button>
         <div id="setup-container">
             <h2>Choose Your Bot</h2>
             <div id="avatar-options">
-                <div class="avatar-card" data-avatar="pedro">
-                    <img src="images/bot/pedro.png" alt="Avatar 1">
+                <div id="avatar-options">
+                    <div class="avatar-card" data-avatar="pedro">
+                        <img src="images/bot/pedro.png" alt="Pedro">
+                        <div class="tooltip">
+                            <h3>Pedro</h3>
+                            <p>The default generic bot. Pedro is here to help and guide you through the game!</p>
+                        </div>
+                    </div>
+                    <div class="avatar-card" data-avatar="Jose">
+                        <img src="images/bot/Jose.png" alt="Jose">
+                        <div class="tooltip">
+                            <h3>Jose</h3>
+                            <p>The enthusiastic bot. Jose is always excited and ready to play with you!</p>
+                        </div>
+                    </div>
+                    <div class="avatar-card" data-avatar="King">
+                        <img src="images/bot/King.png" alt="King">
+                        <div class="tooltip">
+                            <h3>King</h3>
+                            <p>The goal-oriented bot. King is focused on winning and achieving high scores!</p>
+                        </div>
+                    </div>
+                    <div class="avatar-card" data-avatar="maria">
+                        <img src="images/bot/maria.png" alt="Maria">
+                        <div class="tooltip">
+                            <h3>Maria</h3>
+                            <p>The shy bot. Maria is quiet but loves to observe and learn from others.</p>
+                        </div>
+                    </div>
+                    <div class="avatar-card" data-avatar="norbert">
+                        <img src="images/bot/norbert.png" alt="Norbert">
+                        <div class="tooltip">
+                            <h3>Norbert</h3>
+                            <p>The stoic bot. Norbert is calm, composed, and always keeps a cool head.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="avatar-card" data-avatar="Jose">
-                    <img src="images/bot/Jose.png" alt="Avatar 2">
-                </div>
-                <div class="avatar-card" data-avatar="King">
-                    <img src="images/bot/King.png" alt="Avatar 3">
-                </div>
-                <div class="avatar-card" data-avatar="maria">
-                    <img src="images/bot/maria.png" alt="Avatar 4">
-                </div>
-                <div class="avatar-card" data-avatar="norbert">
-                    <img src="images/bot/norbert.png" alt="Avatar 5">
-                </div>
-            </div>
 
-            <button id="save-bot">Save Bot</button>
+           
         </div>
+        
         <a href="index.html" class="back-button">Main Menu</a>
     </main>
 
